fix align

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -148,8 +148,8 @@ li {
 		margin-bottom: 10px;
 	}
 	.speech-list-text {
-		width: 100%;
-		padding: 175px 0 0 70%;
+		width: 25%;
+		padding: 175px 0;
 	}
 }
 
